--- a/index.html
+++ b/index.html
@@ -596,7 +596,7 @@ function loadDefaultWeather(){
   loadWeatherByCoords(
     34.69,
     135.70,
-    "奈良県生駒市あすか野南くま"
+    "奈良県生駒市あすか野南"
   );
 }
 
