--- a/index.html
+++ b/index.html
@@ -582,7 +582,7 @@ async function loadWeather(){
       loadWeatherByCoords(
         pos.coords.latitude,
         pos.coords.longitude,
-        "現在地"
+        "現在地（低精度）"
       );
     },
     ()=>{
