--- a/index.html
+++ b/index.html
@@ -701,7 +701,12 @@ setInterval(loadWeather,3600000);
 
 const alertWords = [
   "日銀","円安","円高","利上げ","利下げ",
-  "株安","株高","為替介入","インフレ"
+  "株安","株高","為替介入","インフレ",
+  "米国","FRB","雇用統計","CPI","GDP",
+  "FOMC","長期金利","10年債","ドル円",
+  "為替","政策金利","固定金利","変動金利",
+"住宅ローン","金利上昇","金利引き上げ",
+"金利引き下げ","破綻"
 ];
 
 function highlightWords(text){
