--- a/index.html
+++ b/index.html
@@ -269,7 +269,7 @@ setInterval(()=>{
  pageIndex=(pageIndex+1)%pages.length;
  document.getElementById(pages[pageIndex]).classList.add("active");
  if(pages[pageIndex]==="page_stock" && chartData.length){drawChart();}
-},60000);
+},12000);
 
 /* ===== ティッカー ===== */
 let tickerFX="",tickerStock="",tickerNews="";
@@ -363,7 +363,7 @@ if(orukanEstimated !== null){
     `<div class="bigFX">
       オルカン推算 ${orukanEstimated.toFixed(0)}
       <br>
-      <span style="font-size:18vw;color:${color};">
+      <span style="font-size:6vw;color:${color};">
         ${arrow}${Math.abs(orukanDiff).toFixed(0)}
         (${Math.abs(orukanDiffPercent).toFixed(2)}%)
       </span>
@@ -719,7 +719,7 @@ const alertWords = [
   "為替","政策金利","固定金利","変動金利",
 "住宅ローン","金利上昇","金利引き上げ",
 "金利引き下げ","破綻","指数","米","日本",
-"短期金利","変動金利"
+"短期金利","変動金利","日米","銀行"
 ];
 
 function highlightWords(text){
