--- a/index.html
+++ b/index.html
@@ -356,11 +356,7 @@ if(baseFX === null){
          (${percent>=0?"+":""}${percent.toFixed(2)}%)
          </span>`;
 
-      tickerMove =
-        `<span style="color:${color}">
-         ${arrow}${Math.abs(change).toFixed(3)}
-         (${Math.abs(percent).toFixed(2)}%)
-         </span>`;
+      
     }
 
 let sinceStartHTML = "";
@@ -386,6 +382,13 @@ if(baseFX !== null){
    起動後 ${diffFromStart>=0?"+":""}${diffFromStart.toFixed(3)}
    (${percentFromStart>=0?"+":""}${percentFromStart.toFixed(2)}%)
    </span>`;
+   
+   tickerMove =
+  `<span style="color:${color}">
+   ${arrow}${Math.abs(diffFromStart).toFixed(3)}
+   (${Math.abs(percentFromStart).toFixed(2)}%)
+   </span>`;
+   
 }
 
 
